<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/training_detail_scrollview"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/training_detail_image_clock"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:src="@drawable/clock"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/training_detail_date_title"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_clock"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_date_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:text="@string/training_detail_date_subtitle"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_clock"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_date_title" />

                <TextView
                    android:id="@+id/training_detail_total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_date_subtitle" />

                <TextView
                    android:id="@+id/training_detail_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_total_time" />

                <TextView
                    android:id="@+id/training_detail_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_start_time" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/training_detail_image_location"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:src="@drawable/location_64"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/training_detail_distance_title"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_location"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_distance_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/training_detail_distance_subtitle"

                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_location"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_distance_title" />

                <TextView
                    android:id="@+id/training_detail_total_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_distance_subtitle" />

                <TextView
                    android:id="@+id/training_detail_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_total_distance" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/training_detail_image_speed"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_stat_name"
                    app:tint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_speed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/training_detail_speed_title"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_speed"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_speed_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:text="@string/training_detail_speed_subtitle"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_speed"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_speed_title" />

                <TextView
                    android:id="@+id/training_detail_average_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_speed_subtitle" />

                <TextView
                    android:id="@+id/training_detail_max_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_average_speed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/training_detail_image_calories"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:src="@drawable/flame"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_calories_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/training_detail_calories_title"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_calories"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_calories_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:text="@string/training_detail_calories_subtitle"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_calories"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_calories_title" />

                <TextView
                    android:id="@+id/training_detail_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_image_calories" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/training_detail_image_map"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="5dp"
                    android:src="@drawable/map"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_map_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/training_detail_map_title"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_map"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/training_detail_map_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:text="@string/training_detail_map_subtitle"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/training_detail_image_map"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_map_title" />

                <fragment
                    class="com.myprog.sportislife.ui.fragment.WorkaroundMapFragment"
                    android:id="@+id/training_detail_map"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_margin="10dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="САМА КАРТА"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/training_detail_image_map"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>